--- a/docs/static/styles.css
+++ b/docs/static/styles.css
@@ -1,12 +1,12 @@
-code.bpt-name.literal > span.pre {
+code.bpt-name.literal>span.pre {
     font-weight: bold;
 }
 
-p > code.bpt-name.literal > span.pre {
+p>code.bpt-name.literal>span.pre {
     font-size: 14pt;
 }
 
-code.literal:not(.bpt-name)  {
+code.literal:not(.bpt-name) {
     border: 1px solid #0004;
     padding: 1px 4px;
     border-radius: 4px;
@@ -21,4 +21,25 @@ pre span.linenos {
 
 a.hoverxref.tooltip {
     white-space: nowrap;
+}
+
+code.highlight.yaml span.l-Scalar-Plain:not(.l-Scalar) {
+    color: #062873;
+    font-weight: bold;
+}
+
+html .highlight pre .c1 {
+    color: #1b8799;
+}
+
+div.body h2 {
+    border-bottom: 2px solid gray;
+    font-size: 180%;
+    ;
+}
+
+div.body h3 {
+    font-style: italic;
+    border-bottom: 1px solid gray;
+    font-size: 150%;
 }
